Mesh Debug samples strange behavior #35025

Closed
opened 2013-04-19 16:54:59 +02:00 by Mikhail Rachinskiy · 6 comments

%%%--- Operating System, Graphics card ---
Windows 7 x32
Renderer: ATI Radeon HD 4770
Vendor: ATI Technologies Inc.
Version: 3.3.11653 Compatibility Profile Context

- Blender version with error, and version that worked ---

Issue appearing: Revision 56160

- Short description of error ---

Strange behavior of a Thickness detection with samples property greater than 1.

  • samples 1: seems ok

  • samples 2-31: highlight faces which are not supposed to be highlighted and takes more time to calculate, which seems to be logical

  • samples 32: looks like "samples 1" and takes no time to calculate, which seems to be strange

    • Steps for others to reproduce the error (preferably based on attached .blend file) ---
      Open attached blend file and play with samples%%%
%%%--- Operating System, Graphics card --- Windows 7 x32 Renderer: ATI Radeon HD 4770 Vendor: ATI Technologies Inc. Version: 3.3.11653 Compatibility Profile Context - Blender version with error, and version that worked --- Issue appearing: Revision 56160 - Short description of error --- Strange behavior of a Thickness detection with samples property greater than 1. - samples 1: seems ok - samples 2-31: highlight faces which are not supposed to be highlighted and takes more time to calculate, which seems to be logical - samples 32: looks like "samples 1" and takes no time to calculate, which seems to be strange - Steps for others to reproduce the error (preferably based on attached .blend file) --- Open attached blend file and play with samples%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

%%%Great toolset btw, not every professional package has tools like this.
Waiting more improvements to the mesh system from you Campbell :D
Thanks.%%%

%%%Great toolset btw, not every professional package has tools like this. Waiting more improvements to the mesh system from you Campbell :D Thanks.%%%
Member

%%%Assigned to Campbell.

BTW: we will rename feature to "Mesh Analysis" or so :)%%%

%%%Assigned to Campbell. BTW: we will rename feature to "Mesh Analysis" or so :)%%%
Author
Member

%%%I think "Mesh Analysis" is prefect :D%%%

%%%I think "Mesh Analysis" is prefect :D%%%

%%%fixed r56181, panel renamed too :)%%%

%%%fixed r56181, panel renamed too :)%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35025
No description provided.