fix [#35025] Mesh Debug samples strange behavior